# libsignal-protocol-c

./: CMakeLists.txt
src/: CMakeLists.txt  libsignal-protocol-c.cmake.in
tests/: CMakeLists.txt
